--- a/frontend/src/components/css/NavBar.css
+++ b/frontend/src/components/css/NavBar.css
@@ -32,7 +32,7 @@ body {
   height: 70px;
   display: flex;
   align-items: center;
-  justify-content: start;
+  justify-content: left;
   padding: 0 20px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
 }
