added courses form (course display hard coded)

--- a/frontend/src/components/css/NavBar.css
+++ b/frontend/src/components/css/NavBar.css
@@ -28,7 +28,7 @@ body {
 }
 
 .navbar {
-  background-color: #333;
+  background-color: #55868C;
   height: 70px;
   display: flex;
   align-items: center;
