--- a/frontend/src/components/css/NavBar.css
+++ b/frontend/src/components/css/NavBar.css
@@ -74,3 +74,24 @@ body {
   cursor: pointer;
 }
 
+.wrapper {
+  position: fixed;
+  height: 100%;
+  width: 200px;
+  background-color: #343a40;
+  padding-top: 60px;
+}
+
+ul {
+  list-style: none;
+  display: block;
+}
+
+li {
+  margin-top: 10px;
+}
+
+.nav-link {
+  color: white !important;
+  text-decoration: none !important;
+}
