--- a/frontend/src/components/css/utils.module.css
+++ b/frontend/src/components/css/utils.module.css
@@ -114,3 +114,19 @@ input:checked + .slider:before {
 .inputWrapping {
   margin: 8px;
 }
+
+.ReactCardFlip{
+  width: 100%;
+  height: 100%;
+  background-color: blue;
+}
+
+.card-container {
+  background-color: pink;
+  border-radius: 10px;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
+  padding: 10px;
+  border: "2px solid black" ;
+  margin : "15px"
+}
+
