--- a/frontend/src/components/css/utils.module.css
+++ b/frontend/src/components/css/utils.module.css
@@ -115,18 +115,49 @@ input:checked + .slider:before {
   margin: 8px;
 }
 
-.ReactCardFlip{
-  width: 100%;
-  height: 100%;
-  background-color: blue;
+.pageBody {
+  background-color: #f2f2f2;
+  padding: 30px;
 }
 
-.card-container {
-  background-color: pink;
-  border-radius: 10px;
-  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
-  padding: 10px;
-  border: "2px solid black" ;
-  margin : "15px"
+h1 {
+  font-size: 48px;
+  margin-bottom: 30px;
+}
+
+.courseGrid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 30px;
+}
+
+.courseCard {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 20px;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease;
+}
+
+.courseCard:hover {
+  transform: translateY(-5px);
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+.courseCard .department {
+  font-size: 24px;
+  font-weight: bold;
+  color: #4c4c4c;
+}
+
+.courseCard .number {
+  font-size: 18px;
+  color: #777;
+}
+
+.courseCard .semester {
+  font-size: 18px;
+  color: #777;
 }
 
