hard coded interests, other changes?

--- a/frontend/src/components/css/LoadingDots.css
+++ b/frontend/src/components/css/LoadingDots.css
@@ -8,7 +8,7 @@ width: 16px;
 height: 16px;
 margin: 3px 6px;
 border-radius: 50%;
-background-color: #a3a1a1;
+background-color: #FFFFFF;
 opacity: 1;
 animation: bouncing-loader 0.6s infinite alternate;
 }
