--- a/frontend/src/components/css/Modal.css
+++ b/frontend/src/components/css/Modal.css
@@ -14,7 +14,7 @@
     position: fixed;
     width: fit-content;
     height: fit-content;
-    background: #F7F5F3;
+    background: #FFFFFF;
     border-radius: 10px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     padding: 12px;
