--- a/frontend/src/components/css/NavBar.css
+++ b/frontend/src/components/css/NavBar.css
@@ -33,8 +33,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: left;
-  padding: 0 20px;
+  padding: 0 20px 8px 0px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
+
 }
 
 .navbar-brand {
