--- a/frontend/src/components/css/utils.module.css
+++ b/frontend/src/components/css/utils.module.css
@@ -67,7 +67,7 @@ input:checked + .slider:before {
 
 .page {
   background-color: #FFFFFF;
-  min-height: 100vh;
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
   font-size: calc(10px+2vmin);
