--- a/frontend/src/components/css/Buttons.css
+++ b/frontend/src/components/css/Buttons.css
@@ -15,17 +15,21 @@
   background: #ffffff;
   border-color: #55868c;
   color: #55868c;
+
 }
 
 .bubble {
-  border-radius: 16px;
-  padding: 8px 16px;
+  border-radius: 20px;
+  padding: 4px 8px;
   margin: 4px;
-  background: #ff8811;
+  background: #CC8B86;
+  border: 3px solid #C3756F;
   color: #FFFFFF;
+  cursor: "default";
+
 }
 
 .bubble:hover {
-  background: #ffa347;
+  background: #C3756F;
   color: #ffffff;
 }
