moved eval form css to css file, renamed evaluation api calls, added UI and logic for getEvaluation

--- a/frontend/src/components/css/utils.module.css
+++ b/frontend/src/components/css/utils.module.css
@@ -109,13 +109,9 @@ input:checked + .slider:before {
   font-size: "small";
 }
 
-.inputWrapping {
-  margin: 8px;
-}
-
 .pageBody {
   background-color: #FFFFFF;
-  padding: 30px;
+  padding: 0px 30px;
 }
 
 h1 {
