--- a/frontend/src/components/css/CourseCard.css
+++ b/frontend/src/components/css/CourseCard.css
@@ -3,16 +3,10 @@
   padding: 10px;
   margin: 8px;
   border-radius: 10px;
+  height: 132px;
   border: 1px solid var(--card-border-color, #2B4162);
   box-shadow: 1px 1px 1px var(--card-shadow-color, #2B4162);
   /* overflow: hidden; */
-}
-
-.sliderCardExpanded {
-  height: 370px; /* expanded height of the card*/
-  background: #f5f5f5;
-  border: 2px solid #2b4162;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
 }
 
 .sliderCardImage {
