--- a/frontend/src/components/css/Modal.css
+++ b/frontend/src/components/css/Modal.css
@@ -17,7 +17,6 @@
     background: #FFFFFF;
     border-radius: 10px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    padding: 12px;
-
-    
+    padding: 24px;
+    margin: 24px;
 }
