--- a/frontend/src/components/css/CourseCard.css
+++ b/frontend/src/components/css/CourseCard.css
@@ -3,12 +3,16 @@
   padding: 10px;
   margin: 8px;
   border-radius: 10px;
-  height: 172px;
+  min-height: 172px;
   border: 1px solid var(--card-border-color, #2B4162);
   box-shadow: 1px 1px 1px var(--card-shadow-color, #2B4162);
   /* overflow: hidden; */
 }
 
+.sliderCard:hover{
+  box-shadow: 2px 2px 2px var(--card-shadow-color, #2B4162);
+  background: #f7f7f7;;
+}
 .sliderCardImage {
   border-radius: "5px";
 }
