--- a/frontend/src/components/css/Modal.css
+++ b/frontend/src/components/css/Modal.css
@@ -12,6 +12,7 @@
 
 .modal-content-wrapper{
     position: fixed;
+    display: flex;
     width: fit-content;
     height: fit-content;
     background: #FFFFFF;
@@ -19,4 +20,12 @@
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     padding: 24px;
     margin: 24px;
+}
+
+.modal-content{
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; */
+    /* display: inline-block; */
 }
