--- a/frontend/src/components/css/Forms.css
+++ b/frontend/src/components/css/Forms.css
@@ -10,13 +10,14 @@
 }
 
 .form-button {
+  height: fit-content;
   border-radius: 8px;
   border: none;
   padding: 8px 16px;
   margin: 0px 8px;
   font-size: 18px;
   font-weight: bold;
-  background-color: #0077ff;
+  background-color: #CC8328;
   color: white;
   cursor: pointer;
 }
