--- a/frontend/src/components/css/Modal.css
+++ b/frontend/src/components/css/Modal.css
@@ -22,10 +22,48 @@
     margin: 24px;
 }
 
-.modal-content{
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; */
-    /* display: inline-block; */
-}
+
+.modal-close-btn {
+    position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #999;
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+  }
+  
+  .modal-close-btn:hover {
+    background-color: #f0f0f0;
+    border-radius: 50%;
+  }
+  
+  .material-icons {
+    font-size: 24px;
+    color: #999;
+  }
+  
+  input[type="password"] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: none;
+    border-bottom: 2px solid #ccc;
+  }
+  
+  input[type="submit"] {
+    color: white;
+    margin: 20px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  input[type="submit"]:hover {
+    background-color: #8F5C1C;
+  }
+  
+  
