--- a/frontend/src/components/css/NavBar.css
+++ b/frontend/src/components/css/NavBar.css
@@ -3,31 +3,31 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.topnav {
+/* .topnav {
   overflow: hidden;
   background-color: #333;
-}
+} */
 
-.topnav a {
+/* .topnav a {
   float: left;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
-}
+} */
 
-.topnav a:hover {
+/* .topnav a:hover {
   background-color: #777;
   color: black;
-}
+} */
 
-.topnav a.active {
+/* .topnav a.active {
   background-color: #04AA6D;
   color: white;
-}
+} */
 
-.navbar {
+/* .navbar {
   background-color: #55868C;
   height: 70px;
   display: flex;
@@ -36,7 +36,7 @@ body {
   padding: 0 20px 8px 0px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
 
-}
+} */
 
 .navbar-brand {
   font-size: 1.5em;
@@ -49,12 +49,12 @@ body {
   background-color: transparent;
 }
 
-.navbar-nav {
+/* .navbar-nav {
   display: flex;
   list-style: none;
   margin: 0;
   padding: 0px 1px;
-}
+} */
 
 .nav-item {
   margin-right: 20px;
@@ -75,24 +75,48 @@ body {
   cursor: pointer;
 }
 
-.wrapper {
+/* .wrapper {
   position: fixed;
   height: 100%;
   width: 200px;
   background-color: #343a40;
-  padding-top: 60px;
-}
-
-ul {
-  list-style: none;
-  display: block;
-}
-
-li {
-  margin-top: 10px;
-}
+  /* padding-top: 60px; */
+ */
 
 .nav-link {
   color: white !important;
   text-decoration: none !important;
+}
+
+/* Custom css */
+.navbar-wrapper{
+  top: 0;
+  left: 0;
+  width: 100%;
+  margin-bottom: px;
+  background-color: #55868C;
+  color: white;
+}
+
+.navbar-topline{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 12px 24px;
+}
+
+.navbar-bottomline{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 24px 12px;
+}
+
+.navbar-links {
+  display: flex;
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
 }
