added card to interests

--- a/frontend/src/components/css/Card.css
+++ b/frontend/src/components/css/Card.css
@@ -21,6 +21,12 @@
   border: 1px solid var(--card-border-color, #2b4162);
   box-shadow: 1px 1px 1px var(--card-shadow-color, #2b4162);
 }
+
+.card-centered{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .cardImage {
   border-radius: "5px";
 }
