--- a/frontend/src/components/css/Forms.css
+++ b/frontend/src/components/css/Forms.css
@@ -2,12 +2,15 @@
   border: 1px solid black;
   border-radius: 10px;
   padding: 8px 8px;
-  width: 40%;
+  /* width: 40%; */
   margin-right: 10px;
   font-size: 16px;
   background-color: #f6f6f6;
   color: #333333;
+  box-sizing: border-box;
+  width: 100%;
 }
+
 .form-button {
   height: fit-content;
   border-radius: 8px;
