--- a/frontend/src/components/css/Profile.css
+++ b/frontend/src/components/css/Profile.css
@@ -35,3 +35,26 @@
 .profile-update-form .error-msg {
   color: red;
 }
+
+.halfCol {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: left;
+  width: 50%;
+}
+
+.leftCol {
+  padding-right: 10px;
+}
+
+.rightCol {
+  padding-left: 10px;
+}
+
+.row {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  flex-direction: row;
+}
