--- a/frontend/src/components/css/NavBar.css
+++ b/frontend/src/components/css/NavBar.css
@@ -3,40 +3,6 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/* .topnav {
-  overflow: hidden;
-  background-color: #333;
-} */
-
-/* .topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-} */
-
-/* .topnav a:hover {
-  background-color: #777;
-  color: black;
-} */
-
-/* .topnav a.active {
-  background-color: #04AA6D;
-  color: white;
-} */
-
-/* .navbar {
-  background-color: #55868C;
-  height: 70px;
-  display: flex;
-  align-items: center;
-  justify-content: left;
-  padding: 0 20px 8px 0px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
-
-} */
 
 .navbar-brand {
   font-size: 1.5em;
@@ -49,13 +15,6 @@ body {
   background-color: transparent;
 }
 
-/* .navbar-nav {
-  display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0px 1px;
-} */
-
 .nav-item {
   margin-right: 20px;
 }
@@ -67,6 +26,9 @@ body {
   padding: 2px 8px;
   border-radius: 25px;
   transition: background-color 0.5s ease-in-out;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .nav-link:hover {
@@ -103,7 +65,7 @@ body {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 12px 24px;
+  padding: 12px 24px 0px;
 }
 
 .navbar-bottomline{
@@ -111,7 +73,7 @@ body {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 0px 24px 12px;
+  padding: 0px 24px 6px;
 }
 
 .navbar-links {
